upd: notification crud update
